cmake_minimum_required(VERSION 2.6.2)
project(MovieThumbs)

#Version number
set(MOVIETHUMBS_VERSION_MAJOR 0)
set(MOVIETHUMBS_VERSION_MINOR 1)
set(MOVIETHUMBS_VERSION_RELEASE 2)
set(MOVIETHUMBS_VERSION "${MOVIETHUMBS_VERSION_MAJOR}.${MOVIETHUMBS_VERSION_MINOR}.${MOVIETHUMBS_VERSION_RELEASE}")

find_package(KDE4 REQUIRED)
find_package(Qt4 REQUIRED)
find_package(QJSON REQUIRED)

include (KDE4Defaults)

add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${KDE4_INCLUDES} ${QT_INCLUDES} ${PROJECT_BINARY_DIR})

add_subdirectory( src )


